--- a/.github/workflows/tag-push.yml
+++ b/.github/workflows/tag-push.yml
@@ -7,53 +7,53 @@ on:
       - '**'           # Push events to every tag including hierarchical tags like v1.0/beta
 
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Set up Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.18.x
-      - uses: dominikh/staticcheck-action@ba605356b4b29a60e87ab9404b712f3461e566dc #v1.3.0
-        with:
-          version: "2022.1.1"
-          install-go: "false" # StaticCheck uses go v1.17 which does not support `any`
+  # lint:
+  #   name: Lint
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+  #       with:
+  #         fetch-depth: 0
+  #     - name: Set up Go
+  #       uses: actions/setup-go@v3
+  #       with:
+  #         go-version: 1.18.x
+  #     - uses: dominikh/staticcheck-action@ba605356b4b29a60e87ab9404b712f3461e566dc #v1.3.0
+  #       with:
+  #         version: "2022.1.1"
+  #         install-go: "false" # StaticCheck uses go v1.17 which does not support `any`
 
-  test:
-    name: Test
-    strategy:
-      matrix:
-        go-version:
-          - 1.18.x
-        platform:
-          - ubuntu-latest
-          - macos-latest
-          - windows-latest
-    runs-on: ${{ matrix.platform }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Set up Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.18.x
-      - name: Run tests
-        run: |
-          go test ./... -coverprofile coverage.out
+  # test:
+  #   name: Test
+  #   strategy:
+  #     matrix:
+  #       go-version:
+  #         - 1.18.x
+  #       platform:
+  #         - ubuntu-latest
+  #         - macos-latest
+  #         - windows-latest
+  #   runs-on: ${{ matrix.platform }}
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+  #       with:
+  #         fetch-depth: 0
+  #     - name: Set up Go
+  #       uses: actions/setup-go@v3
+  #       with:
+  #         go-version: 1.18.x
+  #     - name: Run tests
+  #       run: |
+  #         go test ./... -coverprofile coverage.out
 
   build:
     name: Build
-    runs-on: ubuntu-latest
-    needs: 
-      - test
-      - lint
+    runs-on: ubuntu-20.04
+    # needs: 
+    #   - test
+    #   - lint
     env:
       CGO_ENABLED: 0
       TAG: ${{ github.event.release.tag_name }}
